appId: ${APP_ID}
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: ${E2E_DEV_SERVER_URL}
    timeout: 60000
- tapOn: ${E2E_DEV_SERVER_URL}
- tapOn:
    text: Continue
    optional: true
- tapOn:
    text: Close
    optional: true
- extendedWaitUntil:
    visible: Email
    timeout: 120000
- tapOn: Email
- inputText: ${E2E_EMAIL}
- tapOn: Senha
- inputText: ${E2E_PASSWORD}
- tapOn: Entrar
- assertVisible: Dashboard financeiro
- tapOn: Transações
- tapOn: Despesa
- tapOn: Descrição da transação
- inputText: Despesa Maestro
- tapOn: Valor da transação
- inputText: "250"
- tapOn: ${E2E_CATEGORY}
- tapOn: Adicionar transação
- assertVisible: Despesa Maestro
